--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2370,7 +2370,7 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
 
 .dashed-td tr>td{
     border-bottom: 1px dashed #e5e5e5 !important;
-    padding: 10px 10px !important;
+    padding: 20px 10px !important;
 }
 
 .dashed-td tr{
@@ -2387,4 +2387,17 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
 
 .layui-btn-primary:hover,.layui-btn-primary:active{
     border: 1px solid #506def !important;
+}
+
+.astyle,.astyle:hover{
+    margin-left: 15px;
+    color: #506def;
+}
+
+.yty-textarea{
+    width: 600px !important;
+}
+
+.main-body{
+    margin-bottom: 60px;
 }
