--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2401,3 +2401,38 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
 .main-body{
     margin-bottom: 60px;
 }
+
+.layui-quote-style{
+    margin: 5px 5px 0 5px;
+    border-left: 5px solid #506def;
+}
+
+.yty-form{
+    margin:5px auto !important;
+}
+
+.ulstyle0 {
+    float: left;
+    display: inline-block;
+}
+
+
+.ulstyle0  li{
+    float: left;
+    /*width: 80px;*/
+    margin-right: 5px;
+}
+
+.ulstyle0  li a{
+    color: #506def;
+}
+
+
+
+
+
+
+
+
+
+
