--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -147,42 +147,63 @@
                     <p>1. 短信中插入标签或链接时，标签或链接前后需有空格分隔，请勿删除前后空格，否则可能导致无法正常替换和跳转；</p>
                     <p>2. 短信内容中若含有促销词如:微信、QQ、店庆等,请务必在短信内容末尾添加“退订回N”</p>
                 </blockquote>
-                <table class="layui-table table-border dashed-td" lay-skin="line" lay-size="sm">
-                    <colgroup>
-                        <col class="yty_tdleft" width="30%">
-                        <col class="yty_tdright">
-                    </colgroup>
-                    <tbody>
-                    <tr>
-                        <td class="yty_tdleft"><span class="red_color">*</span> 短信签名</td>
-                        <td colspan="2" class="yty_tdright">
-                            【<input type="text" name="sms_name" id="sms_name" value="阿里狗" placeholder="" autocomplete="off" class="layui-input">】
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="yty_tdleft"><span class="red_color">*</span> 短信标签</td>
-                        <td class="yty_tdright">
-                            <ul class="ulstyle0">
-                                <li><a href="javascript:void(0);">收货人</a></li>
-                                <li><a href="javascript:void(0);">订单编号</a></li>
-                                <li><a href="javascript:void(0);">买家昵称</a></li>
-                                <li><a href="javascript:void(0);">商品简称</a></li>
-                                <li><a href="javascript:void(0);">商品名称</a></li>
-                            </ul>
-                            <!--<br>-->
-                            <!--<p class="marginbuttom5"></p>-->
-                            <textarea placeholder="请输入内容" class="layui-textarea yty-textarea" readonly>注意防骗：如骗子电话短.信骚扰说订单不能发货索取账号信息及银行.卡信息，千万不能相信，有任何问题上线联系客服哦，谨防诈骗！</textarea>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="yty_tdleft">短信测试</td>
-                        <td class="yty_tdright">
+                <div class="layui-row">
+                    <div class="layui-col-md8">
+                        <table class="layui-table table-border dashed-td" lay-skin="line" lay-size="sm">
+                            <colgroup>
+                                <col class="yty_tdleft" width="30%">
+                                <col class="yty_tdright">
+                            </colgroup>
+                            <tbody>
+                            <tr>
+                                <td class="yty_tdleft"><span class="red_color">*</span> 短信签名</td>
+                                <td colspan="2" class="yty_tdright">
+                                    【<input type="text" name="sms_name" id="sms_name" value="阿里狗" placeholder="" autocomplete="off" class="layui-input">】
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="yty_tdleft"><span class="red_color">*</span> 短信标签</td>
+                                <td class="yty_tdright">
+                                    <ul class="ulstyle0">
+                                        <li><a href="javascript:void(0);">收货人</a></li>
+                                        <li><a href="javascript:void(0);">订单编号</a></li>
+                                        <li><a href="javascript:void(0);">买家昵称</a></li>
+                                        <li><a href="javascript:void(0);">商品简称</a></li>
+                                        <li><a href="javascript:void(0);">商品名称</a></li>
+                                    </ul>
 
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-
+                                    <ul class="ulstyle1">
+                                        <li><a href="javascript:void(0);">#淘短链#</a></li>
+                                        <li><a href="javascript:void(0);">#短信模板#</a></li>
+                                    </ul>
+                                    <!--<br>-->
+                                    <!--<p class="marginbuttom5"></p>-->
+                                    <textarea placeholder="请输入内容" class="layui-textarea yty-textarea">注意防骗：如骗子电话短.信骚扰说订单不能发货索取账号信息及银行.卡信息，千万不能相信，有任何问题上线联系客服哦，谨防诈骗！</textarea>
+                                    <p style="font-size:12px">已输入：<span class="red_color">68</span> 字(包含签名) 当前计费：<span class="red_color">1</span>条 计费规则(重要)</p>
+                                    <p style="font-size:12px">提示：<span class="red_color">标签和链接前后需有空格分隔，请勿删除前后空格！</span></p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="yty_tdleft">短信测试</td>
+                                <td class="yty_tdright">
+                                    <input type="text" style="font-size: 12px;width: 300px;" name="test_phone" placeholder="请输入短信测试手机号，多个手机号用逗号(,)隔开" id="test_phone" value="" placeholder="" autocomplete="off" class="layui-input">
+                                    <button type="button" name="" id="" autocomplete="off" class="layui-btn layui-btn-sm  layui-btn-primary">短信测试</button>
+                                    <a href="javascript:void(0);" class="astyle">短信测试记录</a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="layui-col-md4">
+                        <div class="sms-phone">
+                            <div class="phone-container">
+                                <div class="smg-content">
+                            【覃雪宁88】注意防骗：如骗子电话短.信骚扰说订单不能发货索取账号信息及银行.卡信息，千万不能相信，有任何问题上线联系客服哦，谨防诈骗！
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="layui-form-item layer-form-footer">
                     <div class="footer-inner">
                         <button type="submit" lay-submit="" lay-filter="formRule"
