修改短息内容

--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -173,7 +173,7 @@
                                     </ul>
 
                                     <ul class="ulstyle1">
-                                        <li><a href="javascript:void(0);">#淘短链#</a></li>
+                                        <li><a href="javascript:void(0);">#短链#</a></li>
                                         <li><a href="javascript:void(0);">#短信模板#</a></li>
                                     </ul>
                                     <!--<br>-->
