--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -500,7 +500,7 @@
         /**
          * 首次进入系统弹窗
          */
-//        we.tips("<li><a href='#'>欢迎使用云创crm系统！！！！！</a></li>");
+       we.tips("<li><a href='#'>欢迎使用云创crm系统！！！！！</a></li>");
 
         /**
          * DSR评分（近7天、15天、更多切换）
