--- a/application/admin/view/layout/default.html
+++ b/application/admin/view/layout/default.html
@@ -19,6 +19,7 @@
     </div>
 </div>
 <script src="__STATIC__/layui/layui.js"></script>
+<!--<script src="__STATIC__/modules/setField.js"></script>-->
 {block name="script"}
 {include file="common/script" /}
 {/block}
