下单关怀js整理

--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2473,3 +2473,24 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
     font-size: 12px;
     text-indent: 20px;
 }
+
+.font14{
+    font-size: 14px !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
