--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -179,12 +179,12 @@
                                     <!--<br>-->
                                     <!--<p class="marginbuttom5"></p>-->
                                     <textarea placeholder="请输入内容" class="layui-textarea yty-textarea sms-content" id="sms-content">注意防骗：如骗子电话短.信骚扰说订单不能发货索取账号信息及银行.卡信息，千万不能相信，有任何问题上线联系客服哦，谨防诈骗！</textarea>
-                                    <p class="font12">已输入：<span class="red_color">68</span> 字(包含签名) 当前计费：<span class="red_color">1</span>条 <span class="astyle tips-icon" title-icon="1、单条70个字,超出70个字将按照67个字每条计算<br>
+                                    <p class="font12">已输入：<span class="red_color">68</span> 字(包含签名) 当前计费：<span class="red_color">1</span>条 <span class="astyle tips-icon font14" title-icon="1、单条70个字,超出70个字将按照67个字每条计算<br>
 2、一个汉字,数字,字母,空格都算一个字<br>
 3、带标签的短信按实际发出的长度计算！因部分标签替换后长短不一（如买家昵称,商品名称,商品简称等），请以实际替换后长度为准，已输入字数提示仅供参考！">计费规则(重要)</span></p>
-                                    <p class="font12">1、单条70个字,超出70个字将按照67个字每条计算<br></p>
+                                    <!--<p class="font12">1、单条70个字,超出70个字将按照67个字每条计算<br></p>
                                     <p class="font12">2、一个汉字,数字,字母,空格都算一个字<br></p>
-                                    <p class="font12">3、带标签的短信按实际发出的长度计算！因部分标签替换后长短不一（如买家昵称,商品名称,商品简称等），请以实际替换后长度为准，已输入字数提示仅供参考！</p>
+                                    <p class="font12">3、带标签的短信按实际发出的长度计算！因部分标签替换后长短不一（如买家昵称,商品名称,商品简称等），请以实际替换后长度为准，已输入字数提示仅供参考！</p>-->
                                     <p class="font12">提示：<span class="red_color">标签和链接前后需有空格分隔，请勿删除前后空格！</span></p>
                                 </td>
                             </tr>
@@ -469,125 +469,13 @@
     }).use(['index','table','upload','laydate','element','form','authtree','we','weTable','formSearch'], function(){
         var admin = layui.admin
             ,element = layui.element
-            ,table = layui.table
             ,layer = layui.layer
             ,we = layui.we
             ,$  = layui.$
             ,laydate = layui.laydate
             ,form = layui.form
-            ,upload = layui.upload
-            ,formSearch = layui.formSearch
             ,weTable = layui.weTable
             ,toastr = layui.toastr;
-
-        var tableCommon = {
-            elem: '#rule'
-//            ,url:""
-            ,url:"{:url('Admin/user.user/index')}"
-            ,id : 'tableReload'
-            ,skin:'line'
-            ,limit:10
-            ,defaultToolbar: ['filter']
-            ,toolbar : '#toolbar'
-            ,data:{'Search':"{:__('Search')}",'Reset':"{:__('Reset')}"}
-            ,search: false
-            ,cols: [[
-                {type:'checkbox', fixed: 'left'}
-                ,{field:'buyer_name', title: '买家昵称', sort: true,minWidth:150,searchList:{type:'input',operate:'LIKE'}}
-                ,{field:'consignee_name', title: '收货人姓名',minWidth:150}
-                ,{field:'order_status', title: '订单状态',templet: '#switchStatus', sort: true,minWidth:100}
-                ,{field:'order_source', title: '订单来源', sort: true,minWidth:150}
-                ,{field:'consignee_city', title: '收货人所在城市',minWidth:150}
-                ,{field:'mobile', title: '手机号码',minWidth:100}
-                ,{field:'order_number', title: '订单编号',minWidth:150}
-                ,{field:'pay_money', title: '付款金额（元）',minWidth:100}
-                ,{field:'order_time', title: '下单时间',minWidth:100}
-                ,{field:'commodity', title: '购买的宝贝',minWidth:150}
-            ]]
-            ,page: {
-                layout: ['limit', 'count', 'prev', 'page', 'next', 'skip'] //自定义分页布局
-                ,first: false //不显示首页
-                ,last: false //不显示尾页
-
-            }
-            ,done: function(res, curr, count){
-                if(res.status == 'success') {
-                    layer.closeAll();
-                }
-            }
-        };
-
-        table.render(tableCommon); //数据表格初始化
-//        formSearch.api.init(tableCommon); //搜索初始化
-
-        var demoListView = $('#demoList');
-        var uploadListIns = upload.render({
-            elem: '#upload'
-            ,url: "{:url('Admin/Order/upload')}"
-            ,done: function(res, index, upload){ //上传后的回调
-
-            }
-            ,progress: function(e , percent) {
-                element.progress('progressBar',percent  + '%');
-            }
-            ,accept: 'file' //允许上传的文件类型
-            ,size: 50*1024*1024 //最大允许上传的文件大小
-            ,auto:false
-            ,multiple: true
-            ,bindAction: '#testListAction'
-            ,choose: function(obj){
-                var files = this.files = obj.pushFile(); //将每次选择的文件追加到文件队列
-                //读取本地文件
-                obj.preview(function(index, file, result){
-                    var tr = $(['<tr id="upload-'+ index +'">'
-                        ,'<td>'+ file.name +'</td>'
-                        ,'<td>'+ we.format_bytes(file.size,'') +'</td>'
-                        ,'<td>等待上传</td>'
-                        ,'<td>'
-                        ,'<button class="layui-btn layui-btn-xs demo-reload layui-hide">重传</button>'
-                        ,'<button class="layui-btn layui-btn-xs layui-btn-danger demo-delete">删除</button>'
-                        ,'</td>'
-                        ,'</tr>'].join(''));
-
-                    //单个重传
-                    tr.find('.demo-reload').on('click', function(){
-                        obj.upload(index, file);
-                    });
-
-                    //删除
-                    tr.find('.demo-delete').on('click', function(){
-                        delete files[index]; //删除对应的文件
-                        tr.remove();
-                        uploadListIns.config.elem.next()[0].value = ''; //清空 input file 值，以免删除后出现同名文件不可选
-                    });
-
-                    demoListView.append(tr);
-                    element.progress('progressBar', '0%');
-                    $("#progressBar").show();
-                    $(".upload-btn").removeClass('layui-btn-disabled');
-                });
-            }
-            ,done: function(res, index, upload){
-                console.log(res);
-                var tr = demoListView.find('tr#upload-'+ index)
-                    ,tds = tr.children();
-                if(res.status == 'success'){ //上传成功
-                    tds.eq(2).html('<span style="color: #5FB878;">上传成功</span>');
-                    return delete this.files[index]; //删除文件队列已经上传成功的文件
-                } else {
-                    tds.eq(2).html('<span style="color: #FF5722;">'+res.msg+'</span>');
-                }
-                this.error(index, upload);
-            }
-            ,error: function(index, upload){
-                element.progress('progressBar', '0%');
-                var tr = demoListView.find('tr#upload-'+ index)
-                    ,tds = tr.children();
-//                tds.eq(2).html('<span style="color: #FF5722;">上传失败</span>');
-                tds.eq(3).find('.demo-reload').removeClass('layui-hide'); //显示重传
-            }
-        });
-
 
         /**
          *
@@ -645,35 +533,6 @@
         });
 
 
-
-        //监听性别操作
-        form.on('switch(ruleStatus)', function(obj){
-//            console.log(obj);
-            layer.tips(this.value + ' ' + this.name + '：'+ obj.elem.checked, obj.othis);
-        });
-
-        /**
-         * 表格初始化
-         */
-        weTable.api.init({
-            table : "rule",
-            is_display:true,
-            tableid : "tableReload",
-            form:$("form#formRule"),
-            tableCommon: tableCommon,
-            extend : {
-                "add_url": "{:url('admin/push/add','',false)}",
-                "edit_url": "{:url('admin/push/edit','',false)}/ids/",
-                "del_url": "{:url('admin/push/del','',false)}",
-            }
-        });
-
-        /**
-         * 绑定监听事件
-         * */
-//        weTable.api.bindevent();
-        formSearch.api.searchForm($("form#formRule"));
-
         /**
          * 屏蔽标旗点击切换
          */
@@ -690,7 +549,7 @@
          */
         $("body").on("click",".sms-event",function (){
             we.api.open_current_page_layer($(".sms-layer"),'选择短信模版',{
-            },['80%' , '*']);
+            },['80%' , '80%']);
             var areaId = [];
             var areaIdCh = []
             //选中省份
@@ -720,51 +579,6 @@
         })
 
 
-        /**
-         * 评价状态、订单类型全选、非全选状态
-         */
-        form.on('checkbox(check_all)', function(data){
-            var value = data.value;
-            if(value == 'ALL') {
-                if (data.elem.checked) {
-                    $(this).parent(".layui-form").children('input').prop('checked', true);
-                    $(this).parent(".layui-form").children('.layui-form-checkbox').addClass('layui-form-checked');
-                } else {
-                    $(this).parent(".layui-form").children('input').prop('checked', false);
-                    $(this).parent(".layui-form").children('.layui-form-checkbox').removeClass('layui-form-checked');
-                }
-            }
-        });
-
-        /**
-         *省份全选、反选
-         */
-        form.on('radio(check_all)', function(data){
-            var value = data.value;
-            if(value == 'all') {
-                $("input[type=checkbox]").prop('checked', true);
-                $(".layui-form-checkbox").addClass('layui-form-checked');
-            } else {
-                $("input[type=checkbox]").prop('checked', false);
-                $(".layui-form-checkbox").removeClass('layui-form-checked');
-            }
-        });
-
-        /**
-         * 地区点击选中事件
-         */
-        $("body").on("click",".layui-form-checkbox",function (){
-            var p = $(this).prev();
-            if(p.attr('class') == 'all' && p.attr('class') !== 'undefined') {
-                if($(this).hasClass('layui-form-checked')) {
-                    $(this).parent(".layui-form").children('input').prop('checked', true);
-                    $(this).parent(".layui-form").children('.layui-form-checkbox').addClass('layui-form-checked');
-                } else {
-                    $(this).parent(".layui-form").children('input').prop('checked', false);
-                    $(this).parent(".layui-form").children('.layui-form-checkbox').removeClass('layui-form-checked');
-                }
-            }
-        });
 
         /**
          * tips-icon 弹出信息、销毁信息
@@ -797,8 +611,13 @@
 
         });
 
+        /**
+         * 获取文本域光标并插入内容
+         * @param obj
+         * @param str
+         */
         function insertText(obj,str) {
-            // obj.focus();
+            obj.focus();
             if (document.selection) {
                 var sel = document.selection.createRange();
                 sel.text = str;
@@ -815,6 +634,11 @@
                 console.log(obj.value)
             }
         }
+
+        /**
+         * 把光标移动文本域末尾
+         * @param obj
+         */
         function moveEnd(obj){
             obj.focus();
             var len = obj.value.length;
@@ -828,56 +652,6 @@
             }
         }
 
-        table.on('toolbar(rule)', function(obj){
-            var layEvent = obj.event;
-            var checkStatus = table.checkStatus(obj.config.id);
-            //console.log(checkStatus.data);
-            //获取订单id
-            var order_id = [];
-            $.each(checkStatus.data,function (index, value) {
-                order_id.push(value.id);
-            })
-            //console.log(order_id);
-            switch(layEvent){
-                //查询
-                case 'search':
-                    layui.table.reload("tableReload"
-                        ,{
-                            page: {
-                                curr: 1
-                            }
-                            ,where: [],
-                        }
-                    );
-                    break;
-                //发送短信
-                case 'sendSms':
-                    we.tips("<li><a href='#'>发送短信！！！！！</a></li>");
-                    break;
-                //按查询结果发送
-                case 'sendSearchResultSms':
-                    we.tips("<li><a href='#'>按查询结果发送！！！！！</a></li>");
-                    break;
-                //添加订单
-                case 'addOrder':
-                    we.tips("<li><a href='#'>添加订单！！！！！</a></li>");
-                    break;
-                //导入苏宁订单
-                case 'importOrder':
-                    we.api.open("{:url('admin/order/import','',false)}",'导入苏宁订单');
-                    we.tips("<li><a href='#'>导入苏宁订单！！！！！</a></li>");
-                    break;
-                //导出苏宁订单
-                case 'exportOrder':
-                    we.tips("<li><a href='#'>导出苏宁订单！！！！！</a></li>");
-                    break;
-                //拉黑
-                case 'toBlack':
-                    we.tips("<li><a href='#'>拉黑！！！！！</a></li>");
-                    break;
-            }
-
-        });
 
     });
 
